@@ -1,4 +1,6 @@
 ver 0.19.8 (not yet released)
+* input
+  - mms: reduce delay at the beginning of playback
 * decoder
   - dsdiff, dsf: allow ID3 tags larger than 4 kB
 
